// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Builds correct graphs for tree Top level builds correctly 1`] = `
"Категория 1 (3)
├── Категория 1 1 (1)
│   └── Категория 1 1 1
├── Категория 1 2
└── Категория 1 3
Категория 2 (2)
├── Категория 2 1
└── Категория 2 2
"
`;

exports[`Builds correct graphs for tree Tree renders correctly 1`] = `
"Категория 1 (3)
├── Категория 1 1 (1)
│   └── Категория 1 1 1
├── Категория 1 2
└── Категория 1 3
Категория 2 (2)
├── Категория 2 1
└── Категория 2 2
Категория 3 (1)
└── Категория 3 1
Категория 4
"
`;
